Fix the elastic white area on iOS and change bar to translucent.

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #ffc107;
+}
+
+body:before {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  background-color: white;
 }
